src/binary/snapshots/chibiwasm__binary__module__test__decode_module.snap
---
source: src/binary/module.rs
expression: module
---
Module {
    magic: "\0asm",
    version: 1,
    custom_section: Some(
        Custom {
            name: "name",
            data: [
                1,
                18,
                2,
                0,
                9,
                112,
                114,
                105,
                110,
                116,
                95,
                105,
                51,
                50,
                3,
                4,
                109,
                97,
                105,
                110,
                7,
                7,
                2,
                1,
                1,
                97,
                2,
                1,
                120,
            ],
        },
    ),
    type_section: Some(
        [
            FuncType {
                params: [
                    I32,
                ],
                results: [],
            },
            FuncType {
                params: [
                    I32,
                    I32,
                ],
                results: [
                    I32,
                ],
            },
            FuncType {
                params: [],
                results: [],
            },
        ],
    ),
    import_section: Some(
        [
            Import {
                module_name: "test",
                field_name: "print_i32",
                kind: Func(
                    0,
                ),
            },
            Import {
                module_name: "test",
                field_name: "memory-2-inf",
                kind: Table(
                    Table {
                        elem_type: FuncRef,
                        limits: Limits {
                            min: 10,
                            max: None,
                        },
                    },
                ),
            },
            Import {
                module_name: "test",
                field_name: "global-i32",
                kind: Global(
                    GlobalType {
                        value_type: I32,
                        mutability: Const,
                    },
                ),
            },
        ],
    ),
    function_section: Some(
        [
            0,
            1,
            2,
        ],
    ),
    table_section: Some(
        [
            Table {
                elem_type: FuncRef,
                limits: Limits {
                    min: 1,
                    max: Some(
                        256,
                    ),
                },
            },
        ],
    ),
    memory_section: Some(
        [
            Memory {
                limits: Limits {
                    min: 1,
                    max: Some(
                        256,
                    ),
                },
            },
        ],
    ),
    global_section: Some(
        [
            Global {
                global_type: GlobalType {
                    value_type: I32,
                    mutability: Const,
                },
                init_expr: I32(
                    -2,
                ),
            },
            Global {
                global_type: GlobalType {
                    value_type: F32,
                    mutability: Var,
                },
                init_expr: F32(
                    5.5,
                ),
            },
        ],
    ),
    export_section: Some(
        [
            Export {
                name: "test",
                desc: Func(
                    1,
                ),
            },
            Export {
                name: "test2",
                desc: Func(
                    2,
                ),
            },
        ],
    ),
    start_section: Some(
        3,
    ),
    element_section: Some(
        [
            Element {
                table_index: 0,
                offset: I32(
                    0,
                ),
                init: [
                    3,
                ],
            },
        ],
    ),
    data: Some(
        [
            Data {
                memory_index: 0,
                offset: I32(
                    1,
                ),
                init: [
                    97,
                    98,
                    99,
                    100,
                ],
            },
        ],
    ),
    code_section: Some(
        [
            FunctionBody {
                locals: [],
                code: [
                    LocalGet(
                        0,
                    ),
                    I32Const(
                        1,
                    ),
                    I32Add,
                    Drop,
                    End,
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    LocalGet(
                        0,
                    ),
                    LocalGet(
                        1,
                    ),
                    I32Add,
                    End,
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    I32Const(
                        2,
                    ),
                    Call(
                        0,
                    ),
                    End,
                ],
            },
        ],
    ),
}
