src/binary/snapshots/chibiwasm__binary__module__test__return.snap
---
source: src/binary/module.rs
expression: module
---
Module {
    magic: "\0asm",
    version: 1,
    custom_section: None,
    type_section: Some(
        [
            FuncType {
                params: [],
                results: [
                    I32,
                ],
            },
        ],
    ),
    import_section: None,
    function_section: Some(
        [
            0,
        ],
    ),
    table_section: None,
    memory_section: None,
    global_section: None,
    export_section: Some(
        [
            Export {
                name: "type-i32-value",
                desc: Func(
                    0,
                ),
            },
        ],
    ),
    start_section: None,
    element_section: None,
    data: None,
    code_section: Some(
        [
            FunctionBody {
                locals: [],
                code: [
                    Block(
                        Block {
                            block_type: Value(
                                [
                                    I32,
                                ],
                            ),
                            then_body: [
                                I32Const(
                                    1,
                                ),
                                Return,
                                I32Ctz,
                            ],
                            else_body: [],
                        },
                    ),
                    End,
                ],
            },
        ],
    ),
}
